Updated Image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="C:\Users\Anjali\Documents\WebDevelopment\HTML-Personal Site\images\Anjali-modified.png" alt="Anjali's image"></td>
+            <td><img src="Anjali-modified.png" alt="Anjali's image"></td>
             <td><h1>Anjali Kumari</h1><p><em>Web Developer by Interest</em></p>
                 <p>I work at an <em>MNC</em> as an <em>ETL Developer</em>. I am very much interested in learning new languages. I do not have a <em>Computer Science background</em> as I completed my higher studies as an Electrical Engineer. When I started working as a Developer my interests changed. So <strong> Here I am</strong> learning web developement by Angela Yu and hoping I will be able to learn new things everyday.</p></td>
         </tr>
